# intersect-chess-data-service

./: Dockerfile  README.md  docker-compose.yml  local-conf.json  pyproject.toml
.github/workflows/: ci.yaml  publish-release-ghcr.yaml
scripts/: launch_service.py
src/chess_data_service/: data_models.py  monitor.py  service.py
src/intersect_chess_data_service/: __init__.py  cli.py  data_models.py  monitor.py  service.py
tests/: conftest.py  test_data_models.py  test_monitor.py  test_service.py
