[project]
name = "intersect-chess-data-service"
version = "0.1.0"
description = "INTERSECT Service for CHESS Data Egress — monitors HDF5 files and emits events on new measurements"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}

dependencies = [
    "intersect_sdk[amqp]>=0.8.0,<0.9.0",
    "h5py>=3.8",
    "numpy>=1.23",
    "pydantic>=2.0",
]

[project.scripts]
intersect-chess-data-service = "intersect_chess_data_service.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.0",
]

# Pygments <=2.19.2 has a ReDoS vulnerability in AdlLexer (pygments/lexers/archetype.py).
# No upstream fix is available yet. pygments is dev-only (via pytest) and excluded from the
# production image (--no-dev). Uncomment the constraint below once a patched release ships:
# security-constraints = ["pygments>=2.19.3"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src/intersect_chess_data_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
